View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027880 | Open CASCADE | OCCT:Samples | public | 2016-09-19 11:44 | 2017-01-13 16:10 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 6.8.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027880: Samples - fix handling of Unicode paths within MFC import/export sample | ||||
Description | MFC samples should be corrected to properly handle Unicode file names. | ||||
Steps To Reproduce | - Copy some sample files into folder/path containing Unicode symbols (e.g. "Assorty unmöglich путь français") - Start MFC sample. - Try importing files from path containing Unicode symbols. - Try exporting model to path containing Unicode symbols. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0027838 | closed | kgv | Open CASCADE | Foundation Classes - support wchar_t* input within TCollection_AsciiString and TCollection_ExtendedString |
related to | 0028353 | closed | apn | Community | Samples - IESample cannot write files to paths with special characters |
child of | 0022484 | closed | bugmaster | Open CASCADE | UNICODE characters support. |
|
Branch CR27880 has been created by kgv. SHA-1: ca6a6c8658ad56eaaa41ee1a354ba18f7c490664 Detailed log of new commits: Author: kgv Date: Mon Sep 19 11:46:27 2016 +0300 0027880: Samples - fix handling of Unicode paths within MFC import/export sample |
|
Please test the patch (only MFC samples should be checked). |
|
The shape Export\Import for iges, step, stl, wrml is OK for/to patch contained Unicode symbols |
|
Branch CR27880 has been deleted by kgv. SHA-1: ca6a6c8658ad56eaaa41ee1a354ba18f7c490664 |
occt: master e620e285 2016-09-19 08:46:27 Committer: bugmaster Details Diff |
0027880: Samples - fix handling of Unicode paths within MFC import/export sample |
Affected Issues 0027880 |
|
mod - samples/mfc/standard/02_Modeling/src/ModelingDoc.cpp | Diff File | ||
mod - samples/mfc/standard/03_Viewer2d/src/Viewer2dDoc.cpp | Diff File | ||
mod - samples/mfc/standard/04_Viewer3d/src/TexturesExt_Presentation.cpp | Diff File | ||
mod - samples/mfc/standard/05_ImportExport/src/ImportExportApp.cpp | Diff File | ||
mod - samples/mfc/standard/06_Ocaf/src/OcafDoc.cpp | Diff File | ||
mod - samples/mfc/standard/Common/DimensionDlg.cpp | Diff File | ||
mod - samples/mfc/standard/Common/ImportExport/ImportExport.cpp | Diff File | ||
mod - samples/mfc/standard/Common/OCC_BaseDoc.cpp | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-09-19 11:44 | kgv | New Issue | |
2016-09-19 11:44 | kgv | Assigned To | => bugmaster |
2016-09-19 11:46 | git | Note Added: 0057904 | |
2016-09-19 11:47 | kgv | Note Added: 0057905 | |
2016-09-19 11:47 | kgv | Severity | minor => trivial |
2016-09-19 11:47 | kgv | Status | new => resolved |
2016-09-19 11:47 | kgv | Status | resolved => reviewed |
2016-09-19 11:47 | kgv | Relationship added | related to 0027838 |
2016-09-19 11:48 | kgv | Relationship added | child of 0022484 |
2016-09-19 11:48 | kgv | Product Version | 7.0.0 => 6.8.0 |
2016-09-20 12:22 | bugmaster | Note Added: 0057941 | |
2016-09-20 12:22 | bugmaster | Status | reviewed => tested |
2016-09-21 11:24 | bugmaster | Test case number | => Not needed |
2016-09-23 10:21 | bugmaster | Changeset attached | => occt master e620e285 |
2016-09-23 10:21 | bugmaster | Status | tested => verified |
2016-09-23 10:21 | bugmaster | Resolution | open => fixed |
2016-10-28 21:45 | git | Note Added: 0059524 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |
2017-01-13 16:10 | kgv | Relationship added | related to 0028353 |