0027880: Samples - fix handling of Unicode paths within MFC import/export sample