samples/mfc/standard/05_ImportExport/src/ImportExportApp.cpp
@@ -134,19 +134,19 @@ void CImportExportApp::OnFileOpen()
 		// add to filter
 		strFilter += strFilterName;
 		ASSERT(!strFilter.IsEmpty());  // must have a file type name
-		strFilter += (TCHAR)'\0';  // next string please
-		strFilter += (TCHAR)'*';
+		strFilter += L'\0';  // next string please
+		strFilter += L'*';
 		strFilter += strFilterExt;
-		strFilter += (TCHAR)'\0';  // next string please
+		strFilter += L'\0';  // next string please
 		dlg.m_ofn.nMaxCustFilter++;		
 	}
 	// append the "*.*" all files filter
 	CString allFilter;
 	VERIFY(allFilter.LoadString(AFX_IDS_ALLFILTER));
 	strFilter += allFilter;
-	strFilter += (TCHAR)'\0';   // next string please
-	strFilter += _T("*.*");
-	strFilter += (TCHAR)'\0';   // last string
+	strFilter += L'\0';   // next string please
+	strFilter += L"*.*";
+	strFilter += L'\0';   // last string
 	dlg.m_ofn.nMaxCustFilter++;
 	dlg.m_ofn.lpstrFilter = strFilter;
 
